--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-# This workflow will build a .NET project
+# This workflow will build a .NET project and push it to Docker Hub
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
@@ -16,13 +16,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    
     - name: Restore dependencies
       run: dotnet restore
+    
     - name: Build
       run: dotnet build --no-restore
+    
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    # Login to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Build the Docker image
+    - name: Build Docker image
+      run: docker build . -t suhilaljomaa/Test_github_actions:latest  # Change 'myusername/myapp' to your Docker Hub repository
+
+    # Push Docker image to Docker Hub
+    - name: Push Docker image
+      run: docker push suhilaljomaa/Test_github_actions:latest  # Change 'myusername/myapp' to your Docker Hub repository
